--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,17 @@
-beautifulsoup4==4.12.3      # LangChain
-faiss-cpu==1.8.0            # LangChain
-fastapi==0.110.1            # LangChain
-jupyterlab==4.1.6           # LangChain
-langchain==0.1.16
-langchainhub==0.1.15        # LangChain
-langchain-openai==0.1.3     # LangChain
-langserve[all]==0.0.51      # LangChain
+# General
 python-dotenv==1.0.1
+
+# LangChain
+beautifulsoup4==4.12.3
+faiss-cpu==1.8.0
+fastapi==0.110.1
+jupyterlab==4.1.6
+langchain==0.1.16
+langchainhub==0.1.15
+langchain-openai==0.1.3
+langserve[all]==0.0.51
+
+# LlamaIndex
+llama-index==0.10.28
+llama-index-embeddings-huggingface==0.2.0
+llama-index-llms-ollama==0.1.2
