Add haystack code

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,6 @@ langserve[all]==0.0.51
 llama-index==0.10.28
 llama-index-embeddings-huggingface==0.2.0
 llama-index-llms-ollama==0.1.2
+
+# Haystack
+haystack-ai==2.0.1
