--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,10 @@ llama-index-llms-ollama==0.1.2
 
 # Haystack
 haystack-ai==2.0.1
+
+# Transformers
+datasets==2.18.0
+librosa==0.10.1
+soundfile==0.12.1
+torch==2.2.2
+transformers==4.39.3
